Update Jogo.java